# near

./: .gitignore  LICENSE  Near-C1.txt  README.md
o2_nft/: Cargo.toml  build.sh  package.json
o2_nft/fe/: .env.development  .env.production  contract_name.json  jest.config.js  package.json
o2_nft/fe/scripts/: set_credentials.js
o2_nft/fe/src/__tests__/: app.test.js
o2_nft/fe/src/_config/: index.js
o2_nft/fe/src/pages/: index.js
o2_nft/fe/src/pages/api/: index.js
o2_nft/fe/src/pages/api/add-key/: index.js
o2_nft/fe/src/pages/api/delete-access-keys/: index.js
o2_nft/neardev/: dev-account  dev-account.env
o2_nft/scripts/: set-contract-name.js
o2_nft/src/: lib.rs
o3_crossword_puzzle/: Cargo.toml  build.sh  content-answer.json  instruction.txt
o3_crossword_puzzle/fe-crossword-puzzle/: jsconfig.json  package.json
o3_crossword_puzzle/fe-crossword-puzzle/src/_config/: index.js
o3_crossword_puzzle/fe-crossword-puzzle/src/_utils/: hardcoded_data.js  index.js  near-cli-command.js
o3_crossword_puzzle/fe-crossword-puzzle/src/components/: NoCrosswordsPage.js  SuccessPage.js  WonPage.js
o3_crossword_puzzle/fe-crossword-puzzle/src/pages/: _app.js  index.js
o3_crossword_puzzle/fe-crossword-puzzle/src/styles/: _app.scss  _main.scss
o3_crossword_puzzle/res/: crossword_puzzle.wasm
o3_crossword_puzzle/src/: lib.rs
o4_zero_to_hero/1_nft_v_sdk_4.0/contract_nft/: Cargo.toml
o4_zero_to_hero/1_nft_v_sdk_4.0/contract_nft/src/: approval.rs  enumeration.rs  events.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs
(+32 files in other folders)
